envcrypt-test/tests/fixtures/missing_var.stderr
error: environment variable `MISSING` not defined
 --> tests/fixtures/missing_var.rs:4:5
  |
4 |     envc!("MISSING")
  |     ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `envc` (in Nightly builds, run with -Z macro-backtrace for more info)
