envcrypt-test/tests/fixtures/missing_var.rs
use envcrypt::envc;

fn main() {
    envc!("MISSING")
}
